
cmake_minimum_required(VERSION 3.22.0)

project(cppm-homework-06.03)

add_executable(main.cpp figure.hpp figure.cpp triangle.hpp triangle.cpp right_triangle.hpp right_triangle.cpp isosceles_triangle.hpp isosceles_triangle.cpp equilateral_triangle.hpp equilateral_triangle.cpp quadrilateral.hpp quadrilateral.cpp rectangle.hpp rectangle.cpp square.hpp square.cpp parallelogram.hpp parallelogram.cpp rhomb.hpp rhomb.cpp)

